@@ -1,0 +1,15 @@
+# Tcl autoload index file, version 2.0
+# This file is generated by the "auto_mkindex" command
+# and sourced to set up indexing information for one or
+# more commands.  Typically each line is a command that
+# sets an element in the auto_index array, where the
+# element name is the name of a command and the value is
+# a script that loads the command.
+
+set auto_index(::vfs::template::mount) [list package require vfs::template 1.5.2]
+set auto_index(::vfs::template::collate::mount) [list source [file join $dir collatevfs.tcl]]
+set auto_index(::vfs::template::quota::mount) [list source [file join $dir quotavfs.tcl]]
+set auto_index(::vfs::template::version::mount) [list source [file join $dir versionvfs.tcl]]
+set auto_index(::vfs::template::version::delta::mount) [list source [file join $dir deltavfs.tcl]]
+set auto_index(::vfs::template::chroot::mount) [list source [file join $dir chrootvfs.tcl]]
+set auto_index(::vfs::template::fish::mount) [list source [file join $dir fishvfs.tcl]]
